--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -29,7 +29,11 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    loading place wait
+    <div class="ui active transition visible inverted dimmer" style="display: flex !important;">
+      <div class="content">
+        <div class="ui text loader">Loading app...</div>
+      </div>
+    </div>
   </div>
   <!--
       This HTML file is a template.
